--- a/resort/src/App.css
+++ b/resort/src/App.css
@@ -56,6 +56,45 @@ h6 {
   margin-bottom: 1.5em;
 }
 
+
+.btn-primary {
+  display: inline-block;
+  text-decoration: none;
+  letter-spacing: var(--mainSpacing);
+  color: var(--mainBlack);
+  background: var(--primaryColor);
+  padding: 0.4rem 0.9rem;
+  border: 3px solid var(--primaryColor);
+  transition: var(--mainTransition);
+  text-transform: uppercase;
+  cursor: pointer;
+}
+.btn-primary:hover {
+   background: transparent; 
+   color: var(--primaryColor); 
+}
+.loading {
+  text-transform: capitalize;
+  text-align: center;
+  margin-top: 3rem;
+}
+.error {
+  text-align: center;
+  text-transform: uppercase;
+  margin: 2rem 0;
+}
+.empty-search {
+  text-align: center;
+  text-transform: capitalize;
+  margin: 2rem 0;
+  padding: 1rem;
+  letter-spacing: var(--mainSpacing);
+}
+
+/* end globals */
+
+/* Navbar */
+
 .navbar {
   position: fixed;
   top: 0;
@@ -85,6 +124,11 @@ h6 {
   list-style-type: none;
 }
 
+.nav-icon {
+  font-size: 1.5rem;
+  color: var(--primaryColor);
+}
+
 .nav-links a {
   display: block;
   text-decoration: none;
@@ -104,3 +148,160 @@ h6 {
 .show-nav {
   height: 100px;
 }
+
+@media screen and (min-width: 768px) {
+  .nav-btn {
+    display: none;
+  }
+  .nav-center {
+    max-width: 1170px;
+    margin: 0 auto;
+    display: flex;
+  }
+  .nav-links {
+    height: auto;
+    display: flex;
+    margin-left: 4rem;
+  }
+  .nav-links a {
+    margin: 0 1rem;
+    padding: 0.5rem 0;
+  }
+}
+/* End navbar */
+
+/* Hero */
+.defaultHero,
+.defaultHero{
+  min-height: calc(100vh-66px);
+  background: url("./images/defaultBcg.jpeg") center/cover no-repeat;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.roomsHero{
+  background-image: url("./images/room-2.jpeg");
+  min-height: 60vh;
+}
+
+/* End of Hero */
+
+/* banner */
+.banner{
+  display: inline-block;
+  background: rgba(0,0,0,0.5);
+  color: var(--mainWhite);
+  padding: 2rem 1rem;
+  margin: 0px;
+  text-align: center;
+  text-transform: capitalize;
+  letter-spacing: var(--mainSpacing);
+  box-shadow: #cfcfcf;
+  
+}
+
+.banner h1 {
+  font-size: 2.5rem;
+}
+
+.banner div {
+  width: 10rem;
+  height: 5px;
+  background: var(--primaryColor);
+  margin: 1.7rem auto;
+}
+.banner p {
+  font-size: 1.2rem;
+  margin-bottom: 2rem;
+}
+
+@media screen and (min-width: 576px) {
+  .banner {
+    padding: 2rem 3rem;
+  }
+  .banner h1 {
+    font-size: 3rem;
+  }
+}
+@media screen and (min-width: 992px) {
+  .banner {
+    padding: 2rem 6rem;
+  }
+  .banner h1 {
+    font-size: 4rem;
+  }
+}
+
+/* End Banner */
+
+/* Tilte */
+
+.section-title{
+  text-align: center;
+  margin-bottom: 4rem;
+}
+
+.section-title h4{
+  font-size: 2rem;
+  letter-spacing: var(--mainSpacing);
+  text-transform: capitalize;
+  margin-bottom: 1rem;
+}
+
+.section-title div{
+  width: 5rem;
+  height: 5px;
+  margin: 0 auto;
+  background: var(--primaryColor);
+}
+
+ /* End Tiltle */
+
+ /* services */
+
+ .services{
+   padding: 5rem 0;
+   background: var(--darkGrey);
+   text-align: center;
+ }
+
+ .services-center{
+   margin: 0 auto;
+   display: grid;
+   grid-template-columns: repeat(auto-fit, minmax(255px, 1fr));
+   grid-row-gap: 2rem;
+   grid-column-gap: 50px;
+ }
+
+ .services span{
+   display: inline-block;
+   color: var(--primaryColor);
+   font-size: 2.5rem;
+   margin-bottom: 1.5rem;
+ }
+
+ .services h6{
+   letter-spacing: var(--mainSpacing);
+ }
+
+ .services p{
+   widows: 80%;
+   margin: 0 auto;
+ }
+
+ @media screen and (min-width: 992px) {
+  .services-center {
+    width: 95vw;
+    max-width: 1170px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .services p {
+    width: 100%;
+  }
+}
+
+
+ /* end services */
