--- a/resort/src/App.css
+++ b/resort/src/App.css
@@ -313,9 +313,81 @@ h6 {
   margin: 0 auto;
   display: grid;
 }
+
+@media screen and (min-width: 776px){
+  .featured-rooms-center{
+    width: 95vw;
+    grid-template-columns: repeat(auto-fit, minmax(330px, 1fr));
+  }
+
+}
+
+@media screen and (min-width: 992px){
+  .featured-rooms-center{
+    width: 95vw;
+    max-width: 1170px;
+  }
+}
 /* end featured room */
 
 /* room */
 .room{
   box-shadow: var(--lightShadow);
+  transition: var(--mainTransition);
 }
+
+.room:hover{
+  box-shadow: var(--darkShadow);
+}
+.img-container{
+  position: relative;
+}
+
+.img-container img {
+  width: 100%;
+  display: block;
+  transition: var(--mainTransition);
+}
+.price-top{
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.8);
+  color: var(--mainWhite);
+  padding: 0.3rem 0.6rem 0.5rem;
+  border-bottom-right-radius: 1rem;
+  font-size: 0.5rem;
+  text-align: center;
+  transition: var(--mainTransition);
+}
+.price-top h6{
+  margin-bottom: 0;
+  font-size: 0.9rem;
+  font-weight: 300;
+  letter-spacing: var(--mainSpacing);
+}
+.room-link{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: scale(0);
+  transform: all 0.3s linear;
+
+}
+
+.img-container:hover{
+  background: rgba(0, 0, 0,0.8);
+}
+
+.img-container:hover img{
+  opacity: 0.3;
+}
+
+.img-container:hover .price-top{
+  opacity: 0;
+}
+
+.img-container:hover .room-link{
+  transform: translate(-50%, -50%) scale(1);
+}
+
